<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParseLoginACL</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Log In</string>
    <string name="userinfo">Please SignUp/LogIn</string>
    <string name="btn_logout">Log out</string>

</resources>
